--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Halo Dunia!</h1>
   <p>Selamat datang di website pertamaku 🎉</p>
   <button onclick="halo()">Klik Aku</button>
+  <div id="pdf-viewer" style="margin-top:20px;"></div>
 
   <script src="script.js"></script>
 </body>
